Modifiqué index html, h1 y div class page

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>Potrero Cocina</title>
 </head>
 <body>
-    <div>
+    <div class="page">
         <header class="header">
             <div class="logo">
                 <img class="IconHeader" src="img/icon_cook.png" alt="gorro de chef">
-                <h1>Aprendiendo a Cocinar</h1>
+                <h1>Potrero Cocina</h1>
             </div>
             <nav class="menu">
                 <a href="#">Home</a>
