--- a/index.html
+++ b/index.html
@@ -3,25 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable-no, initial-scale=1.0">
+    <meta name="author" content="Aldana Caminos">
+    <meta name="description" content="Web de recetas">
+    <meta name="keywords" content="Recetas, Cocina, Ingredientes, Paso a paso">
     <link rel="stylesheet" href="index.css" type="text/css" media="screen">
+    <!--favicon-->
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="favicon_io/site.webmanifest">
     <title>Potrero Cocina</title>
+    <!--Alert al iniciar la pagina-->
+    <script>alert ("¿Estás dispueste a ver la mejor página de recetas del mundo mundial?")</script>
 </head>
 <body>
     <div class="page">
         <header class="header">
+            <!-- Inicio del Logo de la web-->
             <div class="logo">
                 <img class="IconHeader" src="img/icon_cook.png" alt="gorro de chef">
                 <h1>Potrero Cocina</h1>
             </div>
+            <!-- Inicio del menú principal -->
             <nav class="menu">
-                <a href="#">Home</a>
-                <a href="https://cookpad.com/ar" target="_blank">Recetas</a>
-                <a href="contacto.html" target="_blank">Contacto</a>
+                <a href="#">Inicio</a>
+                <a href="recetas/recipes.html" target="_blank">Recetas</a>
+                <a href="contacto/contacto.html" target="_blank">Contacto</a>
             </nav>
         </header>
         <main>
             <section>
+                <!-- Inicio de la receta principal -->
                 <article>
+                    <div class="coment">
+                        <h5 class="coment">✨ La estrella de nuestras fechas patrias ✨</h5>
+                    </div>
                     <div class="title-recipe">
                         <h2>Locro</h2>
                     </div>
@@ -96,8 +112,9 @@
                         <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/iMRPj85CuMM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </article>
+                <!-- Inicio del menú aside de recetas -->
                 <aside>
-                    <div class="sidebar1">
+                    <div class="sidebar">
                         <div class="title">
                             <h2>Recetas Saladas</h2>
                         </div>
@@ -108,7 +125,7 @@
                             <a href="#">Empanadas</a>
                         </div>
                     </div>
-                    <div class="sidebar2">
+                    <div class="sidebar">
                         <div class="title">
                             <h2>Recetas Dulces</h2>
                         </div>
@@ -122,8 +139,14 @@
                 </aside>
             </section>
         </main>
+        <!--Link de js-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+        <script src="./info.js"></script>
+        <!--Footer-->
         <footer>
             <p>Ejercicio práctico Nº1 de Frontend en Potrero Digital </p>
+            <!--Botón de alert js-->
+            <button onclick="infoWeb()"> Info </button>
         </footer>
         </body>
     </div>
